// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionBank adapter construct builds with attributes 1`] = `
OboModel {
  "content": Object {
    "choose": 2,
    "select": "random-all",
  },
  "modelState": Object {
    "choose": 2,
    "select": "random-all",
  },
}
`;

exports[`QuestionBank adapter construct builds without attributes 1`] = `
OboModel {
  "content": Object {},
  "modelState": Object {
    "choose": Infinity,
    "select": "sequential",
  },
}
`;

exports[`QuestionBank adapter toJSON builds a JSON representation 1`] = `
Object {
  "content": Object {
    "choose": 2,
    "select": "random-all",
  },
}
`;
